--- a/MVOPlatform/src/app/globals.css
+++ b/MVOPlatform/src/app/globals.css
@@ -88,6 +88,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  /* Hide scrollbars for all browsers */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE and Edge */
+}
+
+/* Hide scrollbars for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
 }
 
 html,
